--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
         <a href="assets/docs/crt.pdf">Read here</a>
       </div>
     </article>
-  </main>
 
-  <footer>
-    <p>&copy; 2024 Liver's Blog. All rights reserved.</p>
-  </footer>
+    <article>
+        <div class="content">
+          <div class="thumbnail">
+              <img src="assets/images/testimg.png" alt="Thumbnail">
+          </div>
+          <h2>This is another test article</h2>
+          <p>Je suis desolee.</p>
+          <a href="assets/docs/crt.pdf">Read here</a>
+        </div>
+      </article>
+  </main>
 </body>
 
 </html>
