--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="thumbnail">
               <img src="assets/images/testimg.png" alt="Thumbnail">
           </div>
-          <h2>This is another test article</h2>
+          <h2>This is another ttest article</h2>
           <p>Je suis desolee.</p>
           <a href="assets/docs/crt.pdf">Read here</a>
         </div>
