--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>Liver's Blog</title>
 </head>
@@ -20,7 +21,7 @@
             <img src="assets/images/testimg.png" alt="Thumbnail">
         </div>
         <h2>This is a test article</h2>
-        <p>Je suis desolee.</p>
+        <p>Je suis désolée.</p>
         <a href="assets/docs/crt.pdf">Read here</a>
       </div>
     </article>
@@ -30,8 +31,8 @@
           <div class="thumbnail">
               <img src="assets/images/testimg.png" alt="Thumbnail">
           </div>
-          <h2>This is another ttest article</h2>
-          <p>Je suis desolee.</p>
+          <h2>This is another test article</h2>
+          <p>Je suis désolée.</p>
           <a href="assets/docs/crt.pdf">Read here</a>
         </div>
       </article>
