ok blog version 1 is up!

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
   <header>
-    <h1>Liver's Blog</h1>
+    <div class="title-card">
+      <h1>Liver's Blog</h1>
+      <p>Random Math/CS/Stats/ECE/Ling/Philosophy Notes :></p>
+    </div>
   </header>
 
   <main>
