--- a/index.html
+++ b/index.html
@@ -21,24 +21,13 @@
     <article>
       <div class="content">
         <div class="thumbnail">
-            <img src="assets/images/testimg.png" alt="Thumbnail">
+            <img src="assets/images/thumbnail1.png" alt="Thumbnail">
         </div>
-        <h2>This is a test article</h2>
-        <p>Je suis désolée.</p>
-        <a href="assets/docs/crt.pdf">Read here</a>
+        <h2>1: A Quick Review of Sets and Equivalence Relations [6/19/2024]</h2>
+        <p>Quick definitions of things I didn't learn in high school maths, finishing with a proof that centers around the disjoint nature of equivalence classes.</p>
+        <a href="assets/docs/Abstract_Algebra_Notes.pdf">Read here</a>
       </div>
     </article>
-
-    <article>
-        <div class="content">
-          <div class="thumbnail">
-              <img src="assets/images/testimg.png" alt="Thumbnail">
-          </div>
-          <h2>This is another test article</h2>
-          <p>Je suis désolée.</p>
-          <a href="assets/docs/crt.pdf">Read here</a>
-        </div>
-      </article>
   </main>
 </body>
 
