--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="assets/images/thumbnail1.png" alt="Thumbnail">
         </div>
         <h2>1: A Quick Review of Sets and Equivalence Relations [6/19/2024]</h2>
-        <p>Quick definitions of things I didn't learn in high school maths, finishing with a proof that centers around the disjoint nature of equivalence classes.</p>
+        <p>Quick definitions of things I didn't learn in high school math, finishing with a proof that centers around the disjoint nature of equivalence classes.</p>
         <a href="assets/docs/Abstract_Algebra_Notes.pdf">Read here</a>
       </div>
     </article>
